Dialog padding fix. Dark mode toggle adjustment

--- a/packages/app-admin/src/styles/material-theme-assignments.scss
+++ b/packages/app-admin/src/styles/material-theme-assignments.scss
@@ -192,7 +192,7 @@ Fix the width of input components when inside grids
     position: relative;
     .mdc-dialog__title{
       background-color: $mdc-theme-secondary;
-      padding-bottom: 24px;
+      padding-bottom: 20px;
       font-size: 1.4rem;
       font-weight: 600;
       color: $mdc-theme-on-secondary;
